--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,8 @@ body {
   --primary-color-golden: #de9e53;
   --primary-color-white: #ffffff;
   --secondary-color-beige: #f7f5f1;
+  --primary-color-blue:#02359e;
+   --primary-color-coral:#ff615d;
 }
 
 h1 {
