--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -34,8 +34,8 @@
   height: 100%;
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.9),
-    rgba(0, 0, 0, 0.3)
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 0.7)
   );
   z-index: 4;
 }
@@ -53,16 +53,16 @@
 }
 
 .bannerContentSection button {
-  background-color: white;
-  color:  var(--primary-color-golden);
+  background-color: #f17f56;
+  color:  var(--primary-color-white);
   font-weight: 600;
   font-size: 16px;
   margin-top: 20px;
 }
 
 .bannerContentSection button:hover {
-  background-color:  var(--primary-color-golden);
-  color: white;
+  background-color: var(--primary-color-white);
+  color:  #f17f56;
   font-weight: 600;
   font-size: 16px;
 }
@@ -71,14 +71,15 @@
   width: 1440px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   z-index: 5;
+  text-align: center;
 }
 
 .bannerContentSection {
-  width: 48%;
+  padding-top: 60px  ;
+  width: 80%;
   display: flex;
-  align-items: flex-start;
   justify-content: center;
   row-gap: 10px;
   flex-direction: column;
@@ -211,7 +212,7 @@
   display: block;
   width: 100%;
   margin: auto;
-  background-color: var(--primary-color-golden);
+  background-color:#ff615d;
   border-radius: 5px;
   border: 2px solid white;
   cursor: pointer;
@@ -225,10 +226,10 @@
 
 .bannerFormSection button:hover {
   animation: bounceAnimation 0.6s ease;
-  color: var(--primary-color-golden);
+  color: #ff615d;
   background-color: white;
   border-radius: 5px;
-  border: 2px solid  var(--primary-color-golden);
+  border: 2px solid  #ff615d;
 }
 
 .bannerFormSection h3 {
@@ -238,6 +239,10 @@
   margin-bottom: 20px;
 }
 
+.encquireNowButton{
+ 
+  margin: auto;
+}
 @media all and (max-width: 1240px) {
   .banner {
     margin-top: -120px;
