--- a/src/styles/Features.module.css
+++ b/src/styles/Features.module.css
@@ -147,11 +147,11 @@
 .yellowLineFlex div {
   width: 50px;
   height: 2px;
-  background-color: var(--primary-color-golden);
+  background-color:#f17f56;
 }
 
 .yellowLineFlex h5 {
-  color: var(--primary-color-golden);
+  color:#f17f56;
 }
 
 @media all and (max-width: 1400px) {
@@ -206,7 +206,7 @@
   }
 
   .img1 {
-    width: 40%;
+    width: 95%;
   }
   .img2 {
     width: 60%;
