--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -44,7 +44,7 @@
   justify-content: center;
   position: relative;
   z-index: 3;
-  background-color: var(--primary-color-black);
+  background-color: #f17f56;
 }
 
 .innerNavbar {
@@ -53,12 +53,12 @@
   align-items: center;
   justify-content: space-between;
   padding: 15px 0px;
-  padding-bottom: 10px;
+  /* padding-bottom: 10px; */
   /* border-bottom: 1px solid rgba(255, 255, 255, 0.233); */
 }
 
 .logo {
-  width: 250px;
+  width: 150px;
   height: auto;
 }
 
@@ -71,7 +71,7 @@
 }
 
 .optionsDiv a {
-  color: var(--primary-color-white);
+  color: black;
   text-decoration: none;
   border-bottom: 1px solid transparent;
   font-size: 17px;
@@ -139,7 +139,7 @@
 
 .smallOptionsDiv a {
   display: block;
-  color: var(--primary-color-golden);
+  color: #f17f56;
   font-size: 18px;
   font-weight: 600;
   margin: 15px 0;
@@ -206,7 +206,7 @@
   }
 
   .logo {
-    width: 200px;
+    width: 120px;
   }
 
   .smallNavbar {
@@ -214,7 +214,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    background-color: var(--primary-color-black);
+    background-color: #f17f56;
     padding: 20px;
   }
 
