made some changes

--- a/src/styles/ContactForm.module.css
+++ b/src/styles/ContactForm.module.css
@@ -248,6 +248,10 @@ input::placeholder {
   resize: vertical;
 }
 
+.ContactForm textarea:focus{
+  outline: none;
+}
+
 .ContactForm {
   display: flex;
   flex-direction: column;
