--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -1,8 +1,8 @@
 .banner {
   width: 100%;
-  height: 500px;
+  /* height: 500px; */
   /* margin-top: -10px; */
-  padding: 150px 0px;
+  padding: 100px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -34,8 +34,8 @@
   height: 100%;
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.7),
-    rgba(0, 0, 0, 0.7)
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.6)
   );
   z-index: 4;
 }
