--- a/src/styles/CountdownTimer.module.css
+++ b/src/styles/CountdownTimer.module.css
@@ -22,6 +22,7 @@
     list-style-type: none;
     padding: 1em;
     text-transform: uppercase;
+    width: 150px;
   }
   
   .countdownTimer_li span {
@@ -65,6 +66,7 @@
 
     .countdownTimer_li {
       padding: 0.5em;
+      width: 70px;
     }
   }
   
