--- a/src/styles/Courses.module.css
+++ b/src/styles/Courses.module.css
@@ -12,14 +12,17 @@
 .heading {
   text-align: center;
   font-size: 28px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   font-weight: bold;
   color: #444;
 }
 
 .cardContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Responsive grid layout */
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(300px, 1fr)
+  ); /* Responsive grid layout */
   gap: 20px;
 }
 
@@ -44,11 +47,10 @@
   width: 100%;
 }
 
-.image img{
+.image img {
   height: 100%;
   width: 100%;
 }
-
 
 .details {
   padding: 20px;
@@ -93,7 +95,7 @@
   transform: scale(1.02);
 }
 
-.theButton button{
+.theButton button {
   width: 100%;
 }
 
@@ -109,7 +111,10 @@
   }
 
   .cardContainer {
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Adjust column size */
+    grid-template-columns: repeat(
+      auto-fit,
+      minmax(250px, 1fr)
+    ); /* Adjust column size */
   }
 
   .image {
@@ -141,11 +146,11 @@
   }
 
   .cardContainer {
-    grid-template-columns: 1fr; 
+    grid-template-columns: 1fr;
   }
 
   .image {
-    height: 140px; 
+    height: 250px;
   }
 
   .title {
@@ -159,5 +164,11 @@
   .button {
     padding: 10px;
     font-size: 14px;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .image {
+    height: 200px;
   }
 }
