--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 html,
 body {
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 * {
@@ -37,8 +38,8 @@ p {
 }
 
 @font-face {
-  font-family: "Canela";
-  src: url("./assets/fonts/canelaweb-bold.ttf") format("truetype");
+  font-family: "montserrat";
+  src: url("./assets/fonts/montserrat.regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -56,7 +57,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Canela", sans-serif;
+  font-family: "montserrat", sans-serif;
 }
 
 p,
