--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -34,8 +34,8 @@
   height: 100%;
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.6),
-    rgba(0, 0, 0, 0.6)
+    rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0.4)
   );
   z-index: 4;
 }
@@ -244,11 +244,11 @@
   margin: auto;
 }
 @media all and (max-width: 1240px) {
-  .banner {
-    margin-top: -120px;
-    height: 750px;
-    padding-top: 250px;
-  }
+  /* .banner { */
+    /* margin-top: -120px; */
+    /* height: 750px; */
+    /* padding-top: 250px; */
+  /* } */
 
   .bannerImg {
     height: 800px;
@@ -369,8 +369,8 @@
 @media all and (max-width: 650px) {
   .banner {
     margin-top: 0;
-    padding: 50px 0px;
-    padding-bottom: 80px;
+    padding: 50px 30px;
+    /* padding-bottom: 80px; */
   }
 
   .bannerContentSection {
