changed the name

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   transition: 0.3s all ease-in-out;
 }
 
-#auramah_valley img {
+#prepeve img {
   background-size: cover;
   object-fit: cover;
 }
