--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -4,6 +4,26 @@
   align-items: center;
   justify-content: center;
   padding: 100px 0px;
+  position: relative;
+}
+
+.p1{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 200px;
+  height: auto;
+  opacity: 0.03;
+}
+
+.p2{ 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200px;
+  height: auto;
+  opacity: 0.03;
+  transform: rotate(180deg);
 }
 
 .innerAbout {
