--- a/src/styles/CountdownTimer.module.css
+++ b/src/styles/CountdownTimer.module.css
@@ -34,6 +34,10 @@
   .countdownTimer_countdown {
     margin-top: 20px;
   }
+
+  .countdownTimer_li span{
+    font-weight: 800 !important;
+  }
   
   .countdownTimer_days, 
   .countdownTimer_hours, 
