--- a/src/styles/Joining.module.css
+++ b/src/styles/Joining.module.css
@@ -3,6 +3,25 @@
   /* padding: 2rem; */
   padding: 100px 0px;
   background-color: #f9f9f9;
+  position: relative;
+}
+
+.p3{
+  position: absolute;
+  top: 50px;
+  left: 100px;
+  width: 250px;
+  height: auto;
+  opacity: 0.03;
+}
+
+.p4{
+  position: absolute;
+  bottom: 50px;
+  right: 100px;
+  width: 250px;
+  height: auto;
+  opacity: 0.02;
 }
 
 .joiningParent button{
