--- a/src/styles/Features.module.css
+++ b/src/styles/Features.module.css
@@ -51,7 +51,7 @@
 .FeaturesListParent {
   display: flex;
   margin-top: 25px;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .FeaturesListParent p {
