--- a/src/styles/FeatureProperty.module.css
+++ b/src/styles/FeatureProperty.module.css
@@ -2,9 +2,10 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; 
   padding: 80px 0px;
-  background-color: var(--secondary-color-beige);
+  background-image: linear-gradient(to right, rgb(252, 252, 252), var(--secondary-color-beige));
+  /* background-color: var(--secondary-color-beige); */
   position: relative;
 }
 
