--- a/src/styles/Joining.module.css
+++ b/src/styles/Joining.module.css
@@ -2,7 +2,8 @@
   text-align: center;
   /* padding: 2rem; */
   padding: 100px 0px;
-  background-color: #f9f9f9;
+  /* background-color: #f9f9f9; */
+  background-image: linear-gradient(to right, rgb(252, 252, 252), var(--secondary-color-beige));
   position: relative;
 }
 
