--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -215,7 +215,7 @@
   }
 
   .logo {
-    width: 120px;
+    width: 100px;
   }
 
   .smallNavbar {
@@ -224,9 +224,9 @@
     justify-content: space-between;
     width: 100%;
     /* background-color: #f17f56; */
-    background-color: white;
-    padding: 20px;
-  }
+    background-color: white; 
+    padding: 10px 2.5%;
+  } 
 
   .hamburger {
     width: 25px;
@@ -240,7 +240,7 @@
   .smallNavbar {
     position: relative;
     z-index: 3;
-    padding: 15px 5%;
+    /* padding: 15px 5%; */
   }
 
   .hamburgerContent {
