--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -17,7 +17,7 @@
   background-color:#f17f56;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   animation: bounceAnimation 0.6s ease;
-  border: 1px solid #f17f56;
+  /* border: 1px solid #f17f56; */
 }
 
 /* Keyframes for pulsing effect */
