--- a/src/styles/PopupForm.module.css
+++ b/src/styles/PopupForm.module.css
@@ -225,7 +225,7 @@
   z-index: 10;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .showForm {
