--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -13,7 +13,10 @@
   position: relative;
   overflow: hidden;
   z-index: 2;
+}
 
+.bannerContentSection h1 span {
+  color: #fecd29 !important;
 }
 
 .bannerImg {
@@ -34,8 +37,8 @@
   height: 100%;
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.55),
-    rgba(0, 0, 0, 0.55)
+    rgba(0, 0, 0, 0.65),
+    rgba(0, 0, 0, 0.65) 
   );
   z-index: 4;
 }
@@ -53,8 +56,8 @@
 }
 
 .bannerContentSection button {
-  background-color: #f17f56;
-  color:  var(--primary-color-white);
+  background-color: var(--primary-color-orange);
+  color: var(--primary-color-white);
   font-weight: 600;
   font-size: 16px;
   margin-top: 20px;
@@ -62,7 +65,7 @@
 
 .bannerContentSection button:hover {
   background-color: var(--primary-color-white);
-  color:  #f17f56;
+  color: var(--primary-color-orange);
   font-weight: 600;
   font-size: 16px;
 }
@@ -77,7 +80,7 @@
 }
 
 .bannerContentSection {
-  padding-top: 60px  ;
+  padding-top: 60px;
   width: 80%;
   display: flex;
   justify-content: center;
@@ -173,7 +176,7 @@
   padding: 10px 10px 10px 15px;
   border-radius: 5px;
   height: 50px;
-  border: 1px solid  var(--primary-color-golden);
+  border: 1px solid var(--primary-color-golden);
   background-color: transparent;
   color: var(--primary-color-golden);
   font-size: 14px;
@@ -185,7 +188,7 @@
 }
 
 .bannerFormSection div input::placeholder {
-  color:  var(--primary-color-golden);
+  color: var(--primary-color-golden);
 }
 
 .bannerFormSection textarea {
@@ -194,9 +197,9 @@
   padding: 10px 10px 10px 15px;
   border-radius: 5px;
   margin-bottom: 15px;
-  border: 1px solid  var(--primary-color-golden);
+  border: 1px solid var(--primary-color-golden);
   background-color: transparent;
-  color:  var(--primary-color-golden);
+  color: var(--primary-color-golden);
   font-size: 14px;
 }
 
@@ -212,7 +215,7 @@
   display: block;
   width: 100%;
   margin: auto;
-  background-color:#ff615d;
+  background-color: #ff615d;
   border-radius: 5px;
   border: 2px solid white;
   cursor: pointer;
@@ -229,7 +232,7 @@
   color: #ff615d;
   background-color: white;
   border-radius: 5px;
-  border: 2px solid  #ff615d;
+  border: 2px solid #ff615d;
 }
 
 .bannerFormSection h3 {
@@ -239,15 +242,14 @@
   margin-bottom: 20px;
 }
 
-.encquireNowButton{
- 
+.encquireNowButton {
   margin: auto;
 }
 @media all and (max-width: 1240px) {
   /* .banner { */
-    /* margin-top: -120px; */
-    /* height: 750px; */
-    /* padding-top: 250px; */
+  /* margin-top: -120px; */
+  /* height: 750px; */
+  /* padding-top: 250px; */
   /* } */
 
   .bannerImg {
@@ -400,19 +402,15 @@
     color: #fecd29;
     font-size: 30px;
   }
-
-
 }
 
 .outlinedText {
-    font-size: 100px; /* Adjust font size as needed */
-    font-weight: bold;
-    color: transparent;
-    -webkit-text-stroke: 2px white; /* Outline color */
-    position: relative;
-  }
-
-
+  font-size: 100px; /* Adjust font size as needed */
+  font-weight: bold;
+  color: transparent;
+  -webkit-text-stroke: 2px white; /* Outline color */
+  position: relative;
+}
 
 .outlinedText {
   font-size: 100px; /* Adjust font size as needed */
