--- a/src/styles/Features.module.css
+++ b/src/styles/Features.module.css
@@ -57,6 +57,7 @@
 .FeaturesListParent p {
   margin-left: 10px;
   text-align: left;
+  line-height: 1.5;
 }
 
 .learnMore {
@@ -105,7 +106,7 @@
   align-items: center;
   width: 25px;
   height: 25px;
-  background-color: #000;
+  background-color: var(--primary-color-green);
   color: #fff;
   font-size: 14px;
   font-weight: bold;
@@ -128,7 +129,7 @@
 }
 .img1 {
   border-radius: 20px;
-  width: 95%;
+  width: 80%;
 }
 .img2 {
   border-radius: 20px;
