--- a/src/styles/Joining.module.css
+++ b/src/styles/Joining.module.css
@@ -96,11 +96,26 @@
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
+.activeHeader{
+  background-color: var(--primary-color-orange);
+}
+
+.activeHeader img{
+  filter: invert(1);
+}
+
+.activeHeader h4{
+  /* color: var(--primary-color-orange); */
+  color: white;
+  font-weight: 800 !important;
+}
+
 .accordionHeader h4 {
   line-height: 1.5;
 }
 
 .accordionContent {
+  /* background-color: var(--primary-color-orange); */
   background-color: white;
   width: 1440px;
   margin: auto;
@@ -112,6 +127,7 @@
   max-height: 0px;
   overflow: hidden;
   margin-bottom: 0px;
+  margin-top: -10px;
   padding: 0px 0px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
@@ -123,8 +139,9 @@
 }
 
 .accordionContent p {
-  line-height: 1.7;
+  line-height: 1.7; 
   text-align: left;
+  /* color: var(--primary-color-white); */
 }
 
 .accordionHeader h4 {
@@ -135,6 +152,12 @@
 .plusIcon {
   width: 20px;
   height: 20px;
+  transform: rotate(0deg);
+}
+
+.plusIcon2 {
+  width: 16px;
+  height: 16px;
   transform: rotate(0deg);
 }
 
