--- a/src/styles/FeatureProperty.module.css
+++ b/src/styles/FeatureProperty.module.css
@@ -34,6 +34,9 @@
   top: 100px;
   opacity: 0;
   visibility: hidden;
+  background-color: rgb(236, 236, 236);
+  padding: 20px 20px 0px 20px;
+  border-radius: 10px;
 }
 
 .imageSection.showAnimationSection {
@@ -70,8 +73,10 @@
 
 .bigImage {
   width: 100%;
+  height: 500px;
+  object-fit: contain !important;
+  /* transform: rotate(0.1deg); */
   border-radius: 10px;
-  height: 600px;
   position: relative;
   z-index: 2;
 }
