--- a/src/styles/FeatureProperty.module.css
+++ b/src/styles/FeatureProperty.module.css
@@ -30,13 +30,51 @@
 .imageSection {
   width: 48%;
   position: relative;
-  position: relative;
   top: 100px;
   opacity: 0;
   visibility: hidden;
   background-color: rgb(236, 236, 236);
   padding: 20px 20px 0px 20px;
   border-radius: 10px;
+}
+
+.overlayDiv{
+  width: 200px;
+  height: 100px;
+  position: absolute;
+  bottom: -10px;
+  right: 0px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  z-index: 2;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.overlayDiv img{
+  width: 70%; 
+  height: auto;
+}
+
+.overlayDiv h4{
+  color: var(--primary-color-orange);
+  font-size: 14px;
+}
+
+@media all and (max-width: 500px){
+  .overlayDiv{
+    width: 150px;
+    height: 80px;
+  }
+  
+  .overlayDiv img{
+    width: 80%; 
+  }
 }
 
 .imageSection.showAnimationSection {
@@ -73,7 +111,7 @@
 
 .bigImage {
   width: 100%;
-  height: 500px;
+  height: 600px;
   object-fit: contain !important;
   /* transform: rotate(0.1deg); */
   border-radius: 10px;
