--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,9 @@ body {
 
 
   --primary-color-mustard: #f0b725;
-  --primary-color-blue: #81cad6;
+  --primary-color-blue: #1e90ff;
   --primary-color-green: #6a961f;
-  --primary-color-orange: #f17f56;
+  --primary-color-orange: #1e90ff;
 }
 
 h1 {
@@ -71,6 +71,7 @@ button,
 textarea,
 input,
 span,
+li,
 select,
 option {
   font-family: "GtSectra", sans-serif;
