--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -415,10 +415,9 @@
   position: relative;
 } */
 
-.ParentbannerContainer{
+.ParentbannerContainer {
   padding: 80px 0px;
 }
-
 
 .yellowLineFlex {
   display: flex;
@@ -440,8 +439,7 @@
   margin-bottom: 10px;
 }
 
-
-.bannerContainer{
+.bannerContainer {
   width: 1440px;
   margin: auto;
 }
@@ -453,7 +451,7 @@
   background: #ffffff;
   padding: 40px 60px;
   border-radius: 10px;
-  
+
   gap: 20px;
 }
 
@@ -514,7 +512,9 @@
 .offerSection {
   text-align: center;
   background: #ffffff;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
+    rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
+    rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
   padding: 40px 30px;
   border-radius: 10px;
   border: 1px solid #e5e5e5;
@@ -564,8 +564,6 @@
   border-radius: 4px;
 }
 
- 
-
 @media all and (max-width: 1400px) {
   .bannerContainer {
     width: 1240px;
@@ -603,9 +601,7 @@
   .bannerContainer {
     width: 95vw;
   }
-  
 }
-
 
 /* Media Query for Mobile Devices */
 @media screen and (max-width: 768px) {
@@ -693,12 +689,30 @@
   .card {
     width: 90%;
   }
-  .ParentbannerContainer{
+  .ParentbannerContainer {
     padding: 20px 0px;
   }
+
+  .title {
+    font-size: 25px;
+  }
+
+  .highlight {
+    font-size: 25px;
+  }
   
+  .contentSection h1 {
+    text-align: center !important;
+    line-height: 0.9;
+  }
+
+  .featuresList li {
+    text-align: left !important;
+    margin-bottom: 20px !important;
+    font-size: 18px;
+  }
 }
 
-.bannerContainer button{
+.bannerContainer button {
   width: 95%;
 }
