--- a/src/styles/WhatWillYouLearn.module.css
+++ b/src/styles/WhatWillYouLearn.module.css
@@ -147,11 +147,11 @@
 
 @media (max-width: 768px) {
   .heading h1 {
-      font-size: 2.2rem;
+      font-size: 25px;
   }
 
   .heading h3 {
-      font-size: 1.2rem;
+      font-size:25px;
   }
 
   .dayTitle {
@@ -174,11 +174,11 @@
 
 @media (max-width: 480px) {
   .container {
-      padding: 20px 10px;
+      padding: 40px 10px;
   }
 
   .heading h1 {
-      font-size: 1.8rem;
+      font-size: 25px;
   }
 
   .heading h3 {
