--- a/src/styles/CountdownTimer.module.css
+++ b/src/styles/CountdownTimer.module.css
@@ -45,8 +45,12 @@ ul {
   font-family: "GtSectra", sans-serif !important;
 }
 
+.timerHeader p{
+  margin-bottom: 20px;
+}
+
 .timerHeader {
-  margin-top: 40px;
+  /* margin-top: 40px; */
   margin-bottom: 10px;
   font-size: 1.2rem;
   font-weight: bold;
@@ -89,6 +93,7 @@ ul {
   }
 }
 
+
 @media all and (max-width: 410px) {
   .countdownTimer_countdown ul {
     display: flex;
@@ -100,5 +105,12 @@ ul {
   .countdownTimer_li {
     padding: 0.5em;
     width: 70px;
+  }
+}
+@media all and (max-width: 510px) {
+  .countdownTimer_container{
+    background-color: black;
+    color: white; 
+    padding: 25px 0px;
   }
 }
