--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ p {
 
 @font-face {
   font-family: "montserrat";
-  src: url("./assets/fonts/Montserrat-Regular.ttf") format("truetype");
+  src: url("./assets/fonts/bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
