--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -455,6 +455,12 @@
   gap: 20px;
 }
 
+@media all and (max-width: 500px){
+  .headingText{
+    font-size: 25px !important;
+  }
+}
+
 /* Left Content Section */
 .contentSection {
   width: 50%;
@@ -462,19 +468,22 @@
 }
 
 .contentSection h1 {
-  font-size: 2.2rem;
+  /* font-size: 2.2rem; */
   color: #333;
   margin-bottom: 10px;
+  font-weight: 800;
 }
+ 
 
 .title {
-  font-weight: 700;
+  font-weight: 800;
   color: #000;
   font-size: 2.5rem;
 }
 
 .highlight {
   color: #1e90ff;
+  font-weight: 800;
   font-size: 2.5rem;
 }
 
@@ -533,6 +542,7 @@
   gap: 5px;
   margin-bottom: 14px;
   font-size: 1.4rem;
+  font-weight: 700;
   color: #333;
 }
 
@@ -557,7 +567,7 @@
 }
 
 .discountTag {
-  background: #28a745;
+  background: red;
   color: white;
   font-size: 0.9rem;
   padding: 5px 8px;
@@ -681,9 +691,12 @@
 /* Media Query for Small Devices */
 @media screen and (max-width: 768px) {
   .cardsContainer {
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 15px;
     align-items: center;
+  }
+  .value {
+    font-size: 1.2rem;
   }
 
   .card {
@@ -700,16 +713,27 @@
   .highlight {
     font-size: 25px;
   }
+
+  .icon {
+    font-size: 1rem;
+    color: #5a5af7;
+  }
   
   .contentSection h1 {
     text-align: center !important;
-    line-height: 0.9;
+    line-height: 1.2;
   }
 
   .featuresList li {
     text-align: left !important;
     margin-bottom: 20px !important;
     font-size: 18px;
+  }
+
+  .card {
+    padding: 15px 10px;
+    width: 200px;
+    height: 120px;
   }
 }
 
