--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -48,3 +48,20 @@
     transform: translateY(0);
   }
 }
+
+@media all and (max-width: 410px) {
+  .buttonComponent {
+    color: var(--primary-color-white);
+    padding: 20px 30px;
+    border-radius: 1dvb;
+    border: none;
+    background-color: var(--primary-color-blue);
+    font-size: 15px;
+    cursor: pointer;
+    font-weight: 600;
+    transition: all 0.3s ease;
+    animation: pulseAnimation 2s infinite;
+    margin: auto;
+  }
+  
+}
