--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -19,7 +19,10 @@
   animation: bounceAnimation 0.6s ease;
   /* border: 1px solid #f17f56; */
 }
-
+.buttonComponent h1{
+  font-size: 15px !important;
+  margin: 0px 0px !important;
+}
 /* Keyframes for pulsing effect */
 @keyframes pulseAnimation {
   0% {
