--- a/src/styles/Features.module.css
+++ b/src/styles/Features.module.css
@@ -225,5 +225,17 @@
   .FeaturesContent h1 {
     font-size: 25px;
   }
-  
+}
+
+@media all and (max-width: 767px){
+  .FeaturesImage{
+    display: none;
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  .FeaturesParent{
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  }
 }
